@@ -1,3 +1,7 @@
+2011-06-29 Rohin Narayan <narayan@physi.uni-heidelberg.de>
+    * Tag as TrigT1CaloMonitoring-00-09-01
+	* PPrStabilityMon: pass TriggerTower tool to Plot Manager
+
 2011-06-29 Rohin Narayan <narayan@physi.uni.heidelberg.de>
 	* Tag as TrigT1CaloMonitoring-00-09-01
 	* moved disabled tower look up for FineTime calculation 
